# Project

Apps/Guides/: .env  .gitignore  .pre-commit-config.yaml  ADMIN_GUIDE.md  MONGODB_INTEGRATION.md  MarkdownFile.md  PROJECT_OVERVIEW.md  README.md  README_2FA.md  TRAVELGUIDE_HANDOVER_DOCUMENTATION.md  __init__.py  check_apps.py  check_database.py  check_db.py  cleanup.py  create_normal_user.py  create_normal_user2.py  db_check.py  db_schema.py  inspect_db.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-ai.txt  requirements.txt  setup.py  setup_database.bat  simple_email_test.py  tailwind.config.js
Apps/Guides/Doc/: ADSENSE_INTEGRATION_GUIDE.md  API_DOCUMENTATION_EXPLAINER.md  CODE_DOCUMENTATION_INDEX.md  CODE_EXPLAINER.md  CORE_APPS_CODE_EXPLAINER.md  DATABASE_AND_UTILITIES_EXPLAINER.md  DATABASE_SCHEMA.md  PROJECT_HANDOVER_GUIDE.md
Apps/Guides/accounts/: ACCOUNTS_CODE_EXPLAINER.md  ROLE_BASED_LOGIN.md  __init__.py  __init__.py.new  adapters.py  admin.py  admin_urls.py  admin_views.py  apps.py  auth_views.py  backends.py  context_processors.py  context_processors.py.new  db_indexes.py  decorators.py  email_utils.py  email_verification.py  forms.py  forms_admin.py  forms_preferences.py  guide_views.py  middleware.py  mobile_otp_views.py  models.py  mongo_indexes.py  otp_forms.py  otp_models.py  otp_service.py  otp_utils.py  otp_views.py  permissions.py  providers.py  serializers.py  session_timeout_middleware.py  signals.py  sms_otp.py  template_views.py  test_views.py  urls.py  urls_otp.py  (+10 more)
Apps/Guides/bookings/: models.py  serializers.py  urls.py  utils.py  views.py
Apps/Guides/core/: api_utils.py  api_views.py  app_urls.py  apps.py  context_processors.py  email_utils.py  geoutils.py  managers.py  middleware.py  settings.py  signals.py  template_utils.py  urls.py  urls_api_v1.py  utils.py  views.py  views_api_monitor.py  views_debug.py
Apps/Guides/database/: requirements-db.txt  setup_database.py
Apps/Guides/destinations/: DESTINATIONS_CODE_EXPLAINER.md  DESTINATION_SUBMISSION_WORKFLOW.md  __init__.py  admin.py  apps.py  forms.py  guide_views.py  models.py  nearby_destinations.py  search_views.py  serializers.py  signals.py  temp_urls.py  template_views.py  urls.py  urls_api_v1_updated.py  urls_updated.py  views.py
Apps/Guides/docs/: API_GUIDE_APPLICATION_DOCUMENTATION.md  EMAIL_SYSTEM_DOCUMENTATION.md  EMAIL_SYSTEM_FIXES.md  LOGIN_IMPLEMENTATION.md  MANAGER_DASHBOARD_API_DOCUMENTATION.md  SOCIAL_AUTH_SETUP.md  google_ads_setup.md
Apps/Guides/emergency/: api_views.py  category_safety_view.py  destination_views.py  guide_views.py  models.py  risk_level_view.py  serializers.py  urls.py  urls_api_v1.py  views.py
Apps/Guides/guides/: app_urls.py  apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
Apps/Guides/itineraries/: admin.py  ai_service.py  ai_services.py  apps.py  forms.py  models.py  models_new.py  signals.py  urls.py  urls_ai.py  urls_new.py  views.py  views_ai.py  views_ai_new.py
Apps/Guides/notifications/: apps.py  models.py  signals.py  urls.py  views.py
Apps/Guides/requirements/: base.in  development.in  production.in
Apps/Guides/reviews/: README.md  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py  views_success.py
Apps/Guides/rewards/: REWARDS_CODE_EXPLAINER.md  __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
Apps/Guides/scripts/: fix_destinations_tables.py  reset_db.py
Apps/Guides/security/: README.md  __init__.py  admin.py  auth.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
Apps/Guides/sql/: README.md
Apps/Guides/templates/: 403_csrf.html  about.html  base.html  contact.html  home.html
Apps/Guides/tests/: base.py  test_accounts.py  test_admin_permissions.py  test_api_permissions.py  test_authentication.py  test_bookings.py  test_core_api.py  test_core_models.py  test_core_views.py  test_custom_permissions.py  test_destination_submission_flow.py  test_destination_submission_workflow.py  test_destinations.py  test_emergency.py  test_itineraries_api.py  test_itineraries_models.py  test_itineraries_views.py  test_middleware.py  test_notifications.py  test_permissions_basic.py  test_reviews.py  test_rewards.py  test_rewards_part2.py  test_search.py  test_security.py  test_template_tags.py  test_tours.py  test_transportation.py  test_two_factor_auth.py  test_user_preferences.py  test_utils.py
Apps/Guides/testsprite_tests/: standard_prd.json  (+2 more)
Apps/Guides/tours/: urls.py  (+7 more)
(+742 files in other folders)
