[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# Files and directories to exclude from black formatting
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
  | migrations
  | staticfiles
  | media
  | node_modules
  | \.vscode
  | \.idea
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["guides", "accounts", "destinations", "bookings", "reviews", "core"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=./ --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["guides", "accounts", "destinations", "bookings", "reviews", "core"]
omit = [
    "**/migrations/*",
    "**/tests/*",
    "**/__init__.py",
    "**/admin.py",
    "**/apps.py",
    "**/urls.py",
    "**/wsgi.py",
    "**/asgi.py",
    "**/settings/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "@abc.abstractmethod",
]

[flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "node_modules",
    ".venv",
    "venv",
    "static",
    "media",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]
per-file-ignores = [
    "__init__.py: F401",
    "migrations/*: E501",
]

[tool.ruff]
# Enable all available rules
select = ["E", "F", "I", "N", "W", "B", "C4", "B9", "A", "COM", "C90", "DTZ", "EM", "EXE", "FBT", "ISC", "ICN", "G", "INP", "PIE", "T10", "T20", "TID", "TCH", "RSE", "RET", "SLF", "SLOT", "PTH", "PGH", "PD", "NPY", "NPY", "PL", "PERF", "PTH", "PTH", "TRY", "RUF"]
ignore = [
    "E203",  # whitespace before ':' (black handles this)
    "W503",  # line break before binary operator (black handles this)
    "E501",  # line too long (handled by black)
    "F401",  # unused imports (handled by isort)
    "F403",  # wildcard imports
    "F405",  # name might be undefined
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise ... from err
    "C901",  # function is too complex
    "PLR0913",  # Too many arguments
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude files and directories
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "node_modules",
    "migrations",
    "static",
    "media",
]

# Set the maximum line length
target-version = "py39"
line-length = 88

# Allow unused variables when they are prefixed with _
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow f-strings with no placeholders
allow-untyped-functions = true

# Allow unused loop variables when they are prefixed with _
allow-unused-variables = ["_*"]

# Allow star imports from specific modules
allow-star-imports = ["django.conf"]

# Allow any import level
max-import-level = 100

# Allow any number of statements in a function
max-statements = 100

# Allow any number of branches in a function
max-branches = 20

# Allow any number of return statements in a function
max-returns = 10

# Allow any number of arguments in a function
max-args = 10

# Allow any number of attributes in a class
max-attributes = 20

# Allow any number of public methods in a class
max-public-methods = 50

[tool.ruff.mccabe]
# Maximum complexity of a function (default: 10)
max-complexity = 20
